<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">superhero</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_login_screen">Sign up</string>
    <string name="password_hint">Password</string>
    <string name="username_login_screen">Username</string>
    <string name="back_button">back</string>
    <string name="nameHint">name</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="common_Ok">OK</string>
    <string name="common_error">Error</string>
    <string name="common_unknown_error">Unknown error</string>
    <string name="common_no_connection">No internet connection</string>
    <string name="login_enter_username">Please enter username and password</string>
    <string name="login_screen_wrong_credentials">Wrong Credentials</string>
    <string name="registration_error_empty_username">Empty username</string>
    <string name="registration_error_empty_name">Empty name</string>
    <string name="registration_error_empty_password">Empty password</string>
    <string name="registration_error_passwords_not_matching">Passwords not matching</string>
    <string name="tab_home">Home</string>
    <string name="tab_search">Search</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_profile">Profile</string>
    <string name="cardNameFromDetails">CardName</string>
    <string name="hint_search">search</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="combat">combat</string>
    <string name="durability">durability</string>
    <string name="intelligence">intelligence</string>
    <string name="strength">strength</string>
    <string name="speed">speed</string>
    <string name="power">power</string>
    <string name="power_stats">Power stats</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="eye_color">Eye Color</string>
    <string name="apperance">Apperance</string>
    <string name="race">Race</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="hair_color">Hair color</string>
    <string name="gender">Gender</string>
    <string name="base">Base</string>
    <string name="connections">Connections</string>
    <string name="occupation">Occupation</string>
    <string name="card_details_add">Add</string>
    <string name="card_details_remove">Remove</string>
    <string name="card_details_log_in">Log In</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="are_you_sure_delete">Delete? Are you sure?</string>

</resources>