<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="29dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="15dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backButton"
        style="@style/backButton"
        app:layout_constraintBottom_toTopOf="@+id/userNameInput"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_round_arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backButtonText"
        style="@style/backButtonText"
        app:layout_constraintBottom_toTopOf="@+id/userNameInput"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        android:paddingStart="30dp"
        android:text="@string/back_button"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="63dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameInput"
        style="@style/username"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:hint="@string/username_login_screen"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toEndOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="352dp"
        android:layout_height="55dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toEndOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/userNameInput"
        android:layout_marginTop="50dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            style="@style/passwordChild"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="242dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInButton"
        style="@style/LoginButton"
        android:layout_marginBottom="20dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintStart_toEndOf="@+id/gdStart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registrationButton"
        style="@style/signUp"
        android:layout_marginBottom="34dp"
        android:text="@string/sign_up_login_screen"
        app:layout_constraintBottom_toTopOf="@+id/userNameInput"
        app:layout_constraintEnd_toStartOf="@+id/gdEnd"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.973" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="454dp" />


</androidx.constraintlayout.widget.ConstraintLayout>